--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.7",
+    "@sanity/client": "^6.4.9",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.16.2",
+    "@stripe/stripe-js": "^2.1.1",
+    "canvas-confetti": "^1.6.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "next-sanity": "^5.4.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
+    "sanity": "^3.16.2",
+    "stripe": "^13.4.0",
+    "styled-components": "5.2"
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/preset-react": "^7.22.15"
   }
 }
